kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1-app
  labels:
    app: task1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task1
  template:
    metadata:
      labels:
        app: task1
    spec:
      containers:
      - name: task1-http-server
        image: bbw0r1d/task1-http-server:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: task1-service
spec:
  selector:
    app: task1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
