kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: task1.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task1-service
            port:
              number: 80
